--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#282C34">
 	<title>JDL-Studio</title>
 
-	<link rel="stylesheet" href="dist/css/main-1fde5217e1.css">
+	<link rel="stylesheet" href="dist/css/main-73f9d99e33.css">
 	<link rel="shortcut icon" href="favicon.ico">
 </head>
 <body ng-app="jdlStudio" ng-controller="workspaceController as app">
@@ -22,28 +22,28 @@
 		<header>
 			<div class="tools left">
 				<a href="https://jhipster.github.io" title="JHipster website" target="_blank"><img class="jhi-logo" src="img/logo-jhipster.png"></a>
-				<a class="logo" href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="Sobre DSL-Studio"><h1>DSL-Kukulkal</h1> &nbsp;</a>
+				<a class="logo" href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="Sobre DSL-Studio"><h1>DSL-Kukulkan</h1> &nbsp;</a>
 			</div>
 			<div class="tools">
-				<a href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="About JDL-Studio">
+				<a href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="Sobre DSL-Kukulkan">
 					<i class="lnr lnr-question-circle"></i>
 				</a>
-				<a href="javascript:void(0)" ng-click="app.toggleSidebar('reference')" title="Language reference">
+				<a href="javascript:void(0)" ng-click="app.toggleSidebar('reference')" title="Referencia del Lenguage">
 					<i class="lnr lnr-book"></i>
 				</a>
-				<a id="savebutton" href="javascript:void(0)" download="jdl.png" title="Download snapshot of this diagram">
+				<a id="savebutton" href="javascript:void(0)" download="jdl.png" title="Descargar un snapshot del diagrama">
 					<i class="lnr lnr-camera"></i>
 				</a>
-				<a id="saveTextbutton" href="javascript:void(0)" download="jdl.jh" title="Download text file of this JDL">
+				<a id="saveTextbutton" href="javascript:void(0)" download="jdl.jh" title="Descargar archivo de texto para este modelo">
 					<i class="lnr lnr-download"></i>
 				</a>
-				<a id="uploadbutton" class="upload-dialog" href="#upload-dialog" title="Import text file of a JDL">
+				<a id="uploadbutton" class="upload-dialog" href="#upload-dialog" title="Importar un archivo DSL">
 					<i class="lnr lnr-upload"></i>
 				</a>
-				<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Shareable link to this diagram">
+				<a id="linkbutton" href="javascript:void(0)" target="_blank" title="Compartir este Diagrama">
 					<i class="lnr lnr-link"></i>
 				</a>
-				<a href="javascript:void(0)" ng-click="app.confirmDiscardCurrentGraph()" title="Discard this diagram">
+				<a href="javascript:void(0)" ng-click="app.confirmDiscardCurrentGraph()" title="Eliminar el diagrama actual">
 					<i class="lnr lnr-trash"></i>
 				</a>
 				<span id="tooltip"></span>
@@ -99,7 +99,7 @@
 	// temp hack to use jdl parser from jhipster-core
 	var module = module || {};
 	</script>
-	<script src="dist/js/main-7896638998.js"></script>
+	<script src="dist/js/main-69208f2b53.js"></script>
 	<script>
 		(function (i, s, o, g, r, a, m) {
 			i['GoogleAnalyticsObject'] = r;
